# pydata-global-2025-llm

./: .gitignore  Makefile  README.md  _brand.yml  _quarto.yml  index.qmd  pyproject.toml
code/: app-querychat.py  app-shiny.py  evals.py  my_eval_dataset.csv
docs/: index.html  search.json
