[project]
name = "pydata-global-2025-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "chatlas[eval]>=0.13.2",
    "inspect-ai>=0.3.153",
    "jupyter>=1.1.1",
    "openai>=2.9.0",
    "palmerpenguins>=0.1.4",
    "plotly>=6.5.0",
    "plotnine>=0.15.1",
    "querychat>=0.2.2",
    "ridgeplot>=0.5.0",
    "seaborn>=0.13.2",
    "shiny>=1.5.1",
    "shinylive>=0.8.5",
    "shinywidgets>=0.7.0",
]

[tool.uv.sources]
chatlas = { git = "https://github.com/posit-dev/chatlas" }
